--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
           <div class="absolute right-0 mt-2 bg-white shadow-md rounded-md w-48 hidden peer-checked:flex flex-col z-50">
             <a href="#why" class="px-4 py-2 text-gray-600 hover:bg-gray-100">Why Work With Me?</a>
             <a href="#services" class="px-4 py-2 text-gray-600 hover:bg-gray-100">Services</a>
+            <a href="#portfolio" class="px-4 py-2 text-gray-600 hover:bg-gray-100">Case Studies</a>
             <a href="#about" class="px-4 py-2 text-gray-600 hover:bg-gray-100">About Me</a>
             <a href="#contact" class="px-4 py-2 text-gray-600 hover:bg-gray-100">Let’s Talk</a>
           </div>
@@ -77,6 +78,7 @@
         <nav class="hidden md:flex space-x-6">
           <a href="#why" class="text-gray-600 hover:text-gray-900">Why Work With Me?</a>
           <a href="#services" class="text-gray-600 hover:text-gray-900">Services</a>
+          <a href="#portfolio" class="text-gray-600 hover:text-gray-900">Case Studies</a>
           <a href="#about" class="text-gray-600 hover:text-gray-900">About Me</a>
           <a href="#contact" class="text-gray-600 hover:text-gray-900">Let’s Talk</a>
         </nav>
@@ -162,19 +164,6 @@
       </div>
     </div>
 
-    <section id="why" class="mt-16 mb-16 bg-white py-16 px-6 rounded-lg shadow">
-      <h2 class="text-2xl font-bold text-gray-800 mb-4">Why Work With Me?</h2>
-      <p class="mb-4">Because your infrastructure deserves a power-up.</p>
-      <ul class="list-disc list-inside space-y-2 text-gray-700">
-        <li><strong>Real-World Experience:</strong> From startup scrambles to enterprise complexity — I’ve handled it
-          all.</li>
-        <li><strong>Fast, Lean, No Bloat:</strong> I focus on what actually moves the needle.</li>
-        <li><strong>Hands-On Partner:</strong> I get in the pipes, fix what’s broken, and leave your team stronger.</li>
-        <li><strong>Clear Communication:</strong> No buzzwords, just practical solutions.</li>
-        <li><strong>Right-Sized for SMBs:</strong> Responsive, reliable, and ready to jump in.</li>
-      </ul>
-    </section>
-
     <section id="services" class="mb-16 bg-gray-100 py-16 px-6 rounded-lg">
       <h2 class="text-2xl font-bold text-gray-800 mb-4">Services</h2>
       <ul class="space-y-4 text-gray-700">
@@ -186,6 +175,24 @@
         <li><strong>DevOps Training & Mentoring:</strong> Empower your team with the skills and mindset to operate with
           confidence.</li>
       </ul>
+    </section>
+
+    <section id="portfolio" class="mb-16 bg-white py-16 px-6 rounded-lg shadow">
+      <h2 class="text-2xl font-bold text-gray-800 mb-4">Case Studies</h2>
+      <div class="space-y-8 text-gray-700">
+        <div>
+          <h3 class="text-xl font-semibold text-gray-800 mb-2">Rebuilding Kubernetes Infrastructure for a Web Agency</h3>
+          <p>This two-year gradual migration involved moving from a custom Kubernetes solution to AWS EKS. I redesigned deployment strategies to reduce deployment time from hours to minutes, migrated PostgreSQL databases to managed Aurora or operator-based solutions, and transitioned Prometheus monitoring to Mimir and Loki. Additionally, I implemented complex egress strategies with Istio and Cilium to ensure secure and reliable egress networking.</p>
+        </div>
+        <div>
+          <h3 class="text-xl font-semibold text-gray-800 mb-2">Containerization for a Large FinTech Company</h3>
+          <p>I led the Dockerization and Kubernetes adoption process, delivering hands-on workshops for developers. The result was a custom on-premises Kubernetes platform tailored to their legacy infrastructure, significantly improving scalability and developer autonomy.</p>
+        </div>
+        <div>
+          <h3 class="text-xl font-semibold text-gray-800 mb-2">Infrastructure for a RAG Chatbot</h3>
+          <p>Designed and deployed a Kubernetes-based infrastructure for a Retrieval-Augmented Generation (RAG) chatbot. This system leveraged Azure OpenAI models for vectorization and inference, providing a scalable and cost-efficient deployment environment.</p>
+        </div>
+      </div>
     </section>
 
     <section id="about" class="mb-16 bg-white py-16 px-6 rounded-lg shadow">
