--- a/index.html
+++ b/index.html
@@ -74,8 +74,46 @@
       }
     }
     @media (max-width: 900px) {
-      .hero-content { flex-direction: column; align-items: flex-start; }
-      .hero-photo { align-self: center; margin-top: 2rem; }
+      .hero-logo-bg {
+        top: 40px;
+        left: 40px;
+        width: calc(100vw - 80px);
+      }
+
+      .pipeline-bg {
+        top: 180px;
+        min-width: 100vw;
+      }
+
+      .hero-text {
+        left: 40px;
+        top: 240px;
+        max-width: calc(100vw - 80px);
+      }
+
+      .hero-headline {
+        font-size: 1.8rem;
+      }
+
+      .hero-sub {
+        font-size: 1rem;
+      }
+
+      .hero-photo-img {
+        position: relative;
+        right: auto;
+        bottom: auto;
+        width: 100%;
+        height: auto;
+        max-width: 440px;
+        margin: 40px auto 0;
+        display: block;
+      }
+
+      .bottom-dots {
+        position: relative;
+        margin-top: 40px;
+      }
     }
     .hero-logo-bg {
       position: absolute;
@@ -172,79 +210,32 @@
     
     <!-- Navigation Links -->
     <div class="nav-links fixed md:static top-0 right-[-100%] md:right-0 w-full md:w-auto h-screen md:h-auto bg-[#232323] md:bg-transparent flex flex-col md:flex-row items-center justify-center md:justify-end gap-8 md:gap-12 p-20 md:p-0 transition-all duration-300 peer-checked:right-0">
-      <!-- Logo for mobile menu -->
-      <div class="md:hidden mb-12">
-        <img src="DevOpsMario-Logo-Tail.svg" alt="DevOpsMario Logo" class="h-14 w-auto">
-      </div>
-      
       <a href="#services" class="text-white md:text-[#232323] text-2xl md:text-base hover:text-[#E46C6C] transition-colors duration-300">Services</a>
       <a href="#portfolio" class="text-white md:text-[#232323] text-2xl md:text-base hover:text-[#E46C6C] transition-colors duration-300">Case Studies</a>
       <a href="#how" class="text-white md:text-[#232323] text-2xl md:text-base hover:text-[#E46C6C] transition-colors duration-300">How it works?</a>
       <a href="#about" class="text-white md:text-[#232323] text-2xl md:text-base hover:text-[#E46C6C] transition-colors duration-300">About Me</a>
-      <a href="https://calendar.app.google/8g9KQJMnCWqejdXn6" class="text-white md:text-[#232323] text-2xl md:text-base hover:text-[#E46C6C] transition-colors duration-300">Let's Talk</a>
+      <a href="#contact" class="text-white md:text-[#232323] text-2xl md:text-base hover:text-[#E46C6C] transition-colors duration-300">Let's Talk</a>
     </div>
   </nav>
 
   <!-- Hero Section -->
-  <section class="relative min-h-screen w-full bg-transparent overflow-hidden">
-    <!-- Logo as background -->
-    <img src="DevOpsMario-Hero-Logo.svg" alt="DevOpsMario Logo" class="hero-logo-bg">
-    <!-- Blue Pipeline Decoration -->
-    <img src="Pipeline-Hero.svg" alt="Pipeline Decoration" class="pipeline-bg">
-    <!-- Hero Text -->
-    <div class="hero-text">
-      <h2 class="hero-headline">DevOps consulting for<br>businesses ready to level up</h2>
-      <div class="hero-sub">Bridging Development and Operations<br>for Over 20 Years</div>
+  <section class="relative min-h-screen w-full overflow-hidden flex flex-col">
+    <!-- Logo s menším marginem po stranách -->
+    <div class="absolute top-8 left-0 w-full flex justify-center z-40 px-5">
+      <img src="DevOpsMario-Logo-Tail.svg" alt="DevOpsMario Logo" class="h-20 md:h-14 drop-shadow-lg mx-2">
     </div>
-    <!-- Hero Photo -->
-    <img src="Mario-Hero.webp" alt="Mario Vejlupek" class="hero-photo-img">
-    <!-- Bottom Dots Bar -->
-    <div class="bottom-dots">
-      <div class="icon-carousel">
-        <!-- First set of icons -->
-        <div class="icon-group">
-          <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/kubernetes/kubernetes-plain.svg" alt="Kubernetes" class="tech-icon">
-          <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/terraform/terraform-original.svg" alt="Terraform" class="tech-icon">
-          <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/python/python-original.svg" alt="Python" class="tech-icon">
-          <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/git/git-original.svg" alt="Git" class="tech-icon">
-          <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/gitlab/gitlab-original.svg" alt="GitLab" class="tech-icon">
-          <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/azure/azure-original.svg" alt="Azure" class="tech-icon">
-          <img src="https://argo-cd.readthedocs.io/en/stable/assets/logo.png" alt="Argo CD" class="tech-icon">
-          <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/amazonwebservices/amazonwebservices-original-wordmark.svg" alt="AWS" class="tech-icon">
-        </div>
-        <!-- Second set of icons -->
-        <div class="icon-group">
-          <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/kubernetes/kubernetes-plain.svg" alt="Kubernetes" class="tech-icon">
-          <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/terraform/terraform-original.svg" alt="Terraform" class="tech-icon">
-          <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/python/python-original.svg" alt="Python" class="tech-icon">
-          <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/git/git-original.svg" alt="Git" class="tech-icon">
-          <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/gitlab/gitlab-original.svg" alt="GitLab" class="tech-icon">
-          <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/azure/azure-original.svg" alt="Azure" class="tech-icon">
-          <img src="https://argo-cd.readthedocs.io/en/stable/assets/logo.png" alt="Argo CD" class="tech-icon">
-          <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/amazonwebservices/amazonwebservices-original-wordmark.svg" alt="AWS" class="tech-icon">
-        </div>
-        <!-- Third set of icons -->
-        <div class="icon-group">
-          <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/kubernetes/kubernetes-plain.svg" alt="Kubernetes" class="tech-icon">
-          <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/terraform/terraform-original.svg" alt="Terraform" class="tech-icon">
-          <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/python/python-original.svg" alt="Python" class="tech-icon">
-          <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/git/git-original.svg" alt="Git" class="tech-icon">
-          <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/gitlab/gitlab-original.svg" alt="GitLab" class="tech-icon">
-          <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/azure/azure-original.svg" alt="Azure" class="tech-icon">
-          <img src="https://argo-cd.readthedocs.io/en/stable/assets/logo.png" alt="Argo CD" class="tech-icon">
-          <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/amazonwebservices/amazonwebservices-original-wordmark.svg" alt="AWS" class="tech-icon">
-        </div>
-        <!-- Fourth set of icons -->
-        <div class="icon-group">
-          <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/kubernetes/kubernetes-plain.svg" alt="Kubernetes" class="tech-icon">
-          <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/terraform/terraform-original.svg" alt="Terraform" class="tech-icon">
-          <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/python/python-original.svg" alt="Python" class="tech-icon">
-          <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/git/git-original.svg" alt="Git" class="tech-icon">
-          <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/gitlab/gitlab-original.svg" alt="GitLab" class="tech-icon">
-          <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/azure/azure-original.svg" alt="Azure" class="tech-icon">
-          <img src="https://argo-cd.readthedocs.io/en/stable/assets/logo.png" alt="Argo CD" class="tech-icon">
-          <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/amazonwebservices/amazonwebservices-original-wordmark.svg" alt="AWS" class="tech-icon">
-        </div>
+    <!-- Hero Image -->
+    <img src="Mario-Hero.webp" alt="Mario Vejlupek"
+         class="absolute inset-0 w-full h-full object-cover object-top grayscale z-10" />
+    <!-- Overlay for color tint -->
+    <div class="absolute inset-0 bg-[#E46C6C] opacity-80 z-20"></div>
+    <!-- Hero Text -->
+    <div class="relative z-30 flex flex-col items-start justify-center h-full px-6 pt-32">
+      <h2 class="text-3xl xs:text-4xl sm:text-5xl font-bold italic text-black mb-4 leading-tight" style="font-family:Helvetica,Arial,sans-serif;">
+        DevOps consulting for<br>businesses ready to <span class="bg-blue-400 px-2">level up</span>
+      </h2>
+      <div class="text-lg xs:text-xl text-black font-normal">
+        Bridging Development and Operations<br>for Over 20 Years
       </div>
     </div>
   </section>
