--- a/index.html
+++ b/index.html
@@ -21,11 +21,6 @@
       font-weight: 900;
       font-family: Helvetica, Arial, sans-serif;
     }
-    .pixel-line {
-      position: absolute;
-      background: #4BA3FD;
-      z-index: 1;
-    }
     .bottom-dots {
       position: absolute;
       left: 0; right: 0; bottom: 0;
@@ -192,29 +187,20 @@
     .nav-links a:focus ~ .nav-links {
       right: -100%;
     }
+
   </style>
 </head>
 
 <body class="relative min-h-screen overflow-x-hidden">
   <!-- Navigation -->
-  <nav class="nav-container">
-    <!-- Hidden checkbox for menu state -->
-    <input type="checkbox" id="menu-toggle" class="hidden peer">
-    
-    <!-- Hamburger Menu Button -->
-    <label for="menu-toggle" class="hamburger-menu cursor-pointer flex flex-col justify-between w-[30px] h-[21px] bg-transparent border-none p-0 z-50 md:hidden">
-      <span class="w-full h-[3px] bg-[#232323] rounded-[3px] transition-all duration-300 peer-checked:translate-y-[9px] peer-checked:rotate-45"></span>
-      <span class="w-full h-[3px] bg-[#232323] rounded-[3px] transition-all duration-300 peer-checked:opacity-0"></span>
-      <span class="w-full h-[3px] bg-[#232323] rounded-[3px] transition-all duration-300 peer-checked:-translate-y-[9px] peer-checked:-rotate-45"></span>
-    </label>
-    
-    <!-- Navigation Links -->
-    <div class="nav-links fixed md:static top-0 right-[-100%] md:right-0 w-full md:w-auto h-screen md:h-auto bg-[#232323] md:bg-transparent flex flex-col md:flex-row items-center justify-center md:justify-end gap-8 md:gap-12 p-20 md:p-0 transition-all duration-300 peer-checked:right-0">
-      <a href="#services" class="text-white md:text-[#232323] text-2xl md:text-base hover:text-[#E46C6C] transition-colors duration-300">Services</a>
-      <a href="#portfolio" class="text-white md:text-[#232323] text-2xl md:text-base hover:text-[#E46C6C] transition-colors duration-300">Case Studies</a>
-      <a href="#how" class="text-white md:text-[#232323] text-2xl md:text-base hover:text-[#E46C6C] transition-colors duration-300">How it works?</a>
-      <a href="#about" class="text-white md:text-[#232323] text-2xl md:text-base hover:text-[#E46C6C] transition-colors duration-300">About Me</a>
-      <a href="#contact" class="text-white md:text-[#232323] text-2xl md:text-base hover:text-[#E46C6C] transition-colors duration-300">Let's Talk</a>
+  <nav class="nav-container hidden md:block">
+    <!-- Desktop navigation only -->
+    <div class="nav-links flex space-x-12 text-black text-base font-normal">
+      <a href="#services">Services</a>
+      <a href="#portfolio">Case Studies</a>
+      <a href="#how">How it works?</a>
+      <a href="#about">About Me</a>
+      <a href="#contact">Let's Talk</a>
     </div>
   </nav>
 
@@ -222,22 +208,81 @@
   <section class="relative min-h-screen w-full overflow-hidden flex flex-col">
     <!-- Logo s menším marginem po stranách -->
     <div class="absolute top-8 left-0 w-full flex justify-center z-40 px-5">
-      <img src="DevOpsMario-Logo-Tail.svg" alt="DevOpsMario Logo" class="h-20 md:h-14 drop-shadow-lg mx-2">
+      <img src="DevOpsMario-Logo-Tail.svg" alt="DevOpsMario Logo" class="h-20 md:h-14 mx-2">
     </div>
     <!-- Hero Image -->
     <img src="Mario-Hero.webp" alt="Mario Vejlupek"
-         class="absolute inset-0 w-full h-full object-cover object-top grayscale z-10" />
+         class="absolute inset-0 w-full h-full object-cover object-top grayscale z-10 md:z-[50]" />
     <!-- Overlay for color tint -->
     <div class="absolute inset-0 bg-[#E46C6C] opacity-80 z-20"></div>
     <!-- Hero Text -->
     <div class="relative z-30 flex flex-col items-start justify-center h-full px-6 pt-32">
       <h2 class="text-3xl xs:text-4xl sm:text-5xl font-bold italic text-black mb-4 leading-tight" style="font-family:Helvetica,Arial,sans-serif;">
-        DevOps consulting for<br>businesses ready to <span class="bg-blue-400 px-2">level up</span>
+        DevOps consulting for<br>businesses ready to <span class="bg-[#2895E5] px-2">level up</span>
       </h2>
-      <div class="text-lg xs:text-xl text-black font-normal">
+      <div class="text-lg xs:text-xl text-black font-normal mb-8">
         Bridging Development and Operations<br>for Over 20 Years
       </div>
+      <!-- Mobilní menu pod hero textem -->
+      <div class="flex flex-col w-full items-center gap-4 md:hidden mb-8">
+        <a href="#services" class="text-black text-4xl font-bold hover:text-blue-600 transition">Services</a>
+        <a href="#portfolio" class="text-black text-4xl font-bold hover:text-blue-600 transition">Case Studies</a>
+        <a href="#how" class="text-black text-4xl font-bold hover:text-blue-600 transition">How it works?</a>
+        <a href="#about" class="text-black text-4xl font-bold hover:text-blue-600 transition">About Me</a>
+        <a href="#contact" class="text-black text-4xl font-bold hover:text-blue-600 transition">Let's Talk</a>
+      </div>
     </div>
+
+    <!-- Bottom Dots Bar -->
+    <div class="bottom-dots">
+      <div class="icon-carousel">
+        <!-- First set of icons -->
+        <div class="icon-group">
+          <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/kubernetes/kubernetes-plain.svg" alt="Kubernetes" class="tech-icon">
+          <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/terraform/terraform-original.svg" alt="Terraform" class="tech-icon">
+          <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/python/python-original.svg" alt="Python" class="tech-icon">
+          <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/git/git-original.svg" alt="Git" class="tech-icon">
+          <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/gitlab/gitlab-original.svg" alt="GitLab" class="tech-icon">
+          <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/azure/azure-original.svg" alt="Azure" class="tech-icon">
+          <img src="https://argo-cd.readthedocs.io/en/stable/assets/logo.png" alt="Argo CD" class="tech-icon">
+          <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/amazonwebservices/amazonwebservices-original-wordmark.svg" alt="AWS" class="tech-icon">
+        </div>
+        <!-- Second set of icons -->
+        <div class="icon-group">
+          <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/kubernetes/kubernetes-plain.svg" alt="Kubernetes" class="tech-icon">
+          <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/terraform/terraform-original.svg" alt="Terraform" class="tech-icon">
+          <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/python/python-original.svg" alt="Python" class="tech-icon">
+          <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/git/git-original.svg" alt="Git" class="tech-icon">
+          <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/gitlab/gitlab-original.svg" alt="GitLab" class="tech-icon">
+          <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/azure/azure-original.svg" alt="Azure" class="tech-icon">
+          <img src="https://argo-cd.readthedocs.io/en/stable/assets/logo.png" alt="Argo CD" class="tech-icon">
+          <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/amazonwebservices/amazonwebservices-original-wordmark.svg" alt="AWS" class="tech-icon">
+        </div>
+        <!-- Third set of icons -->
+        <div class="icon-group">
+          <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/kubernetes/kubernetes-plain.svg" alt="Kubernetes" class="tech-icon">
+          <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/terraform/terraform-original.svg" alt="Terraform" class="tech-icon">
+          <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/python/python-original.svg" alt="Python" class="tech-icon">
+          <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/git/git-original.svg" alt="Git" class="tech-icon">
+          <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/gitlab/gitlab-original.svg" alt="GitLab" class="tech-icon">
+          <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/azure/azure-original.svg" alt="Azure" class="tech-icon">
+          <img src="https://argo-cd.readthedocs.io/en/stable/assets/logo.png" alt="Argo CD" class="tech-icon">
+          <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/amazonwebservices/amazonwebservices-original-wordmark.svg" alt="AWS" class="tech-icon">
+        </div>
+        <!-- Fourth set of icons -->
+        <div class="icon-group">
+          <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/kubernetes/kubernetes-plain.svg" alt="Kubernetes" class="tech-icon">
+          <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/terraform/terraform-original.svg" alt="Terraform" class="tech-icon">
+          <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/python/python-original.svg" alt="Python" class="tech-icon">
+          <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/git/git-original.svg" alt="Git" class="tech-icon">
+          <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/gitlab/gitlab-original.svg" alt="GitLab" class="tech-icon">
+          <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/azure/azure-original.svg" alt="Azure" class="tech-icon">
+          <img src="https://argo-cd.readthedocs.io/en/stable/assets/logo.png" alt="Argo CD" class="tech-icon">
+          <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/amazonwebservices/amazonwebservices-original-wordmark.svg" alt="AWS" class="tech-icon">
+        </div>
+      </div>
+    </div>
+
   </section>
 
   <!-- Services Section -->
